[config] QueryDslConfig